Redemption sample for an original entity that had bridged an asset, simplify build files, added TODOs